Changes for 1.8.3

 - [ZBX-2300] fixed caching of "Database monitor" items. Thanks to Kirill Fateev (Sasha)
 - [ZBX-2290] fixed screen cells moving (Vedmak)
 - [ZBX-2301] fixed "configure" script with libssh2-1.0.0 library (Sasha)
 - [ZBX-2296] fixed possible heavy loaded server crash when using internal checks (Sasha)
 - [ZBX-2295] added additional units to graphs Y axis (Aly)
 - [ZBX-2285] fixed sending of active items multiple times (asaveljevs,Sasha)
 - [ZBX-2266] fixed server crash when processing malformed calculated items (asaveljevs)
 - [ZBX-1346] use single quotes in example frontend configuration file (Richlv)
 - [ZBX-2274] fixed trigger expression corruption with trigger wizard (AM)
 - [ZBX-2273] add support of macro {TRIGGER.EVENTS.UNACK} for map labels (Vedmak)
 - [ZBX-2279] fixed error when changing graph name case (Vedmak)
 - [ZBX-2252] fixed server crash and infinite looping in telnet checks (asaveljevs)
 - [ZBX-2275] fixed loss of the log-data if Zabbix server is unavailable (Sasha)
 - [DEV-457] improved dashboard favorite selection (Aly)
 - [DEV-457] improvements in dynamic map link indicators form (Aly)
 - [ZBX-2258] fixed applications import (Vedmak)
 - [ZBX-1357] update Brazilian Portuguese translation; thanks to edson (Richlv)
 - [ZBX-2254] added update time for monitorin triggers screen (Vedmak)
 - [ZBX-1886] added js translations (Vedmak)
 - [ZBX-2245] added missing functions in trigger expression builder (Vedmak)
 - [ZBX-2190] fixed trigger expression check for syntax (AM)
 - [ZBX-2242] fixed agent crash on HP-UX when processing logrt[] items (asaveljevs,Sasha)
 - [ZBXNEXT-288] improved server performance by not storing function lastvalue in database (asaveljevs,Sasha)
 - [ZBX-1753] added permission check for trigger sound notifications (Aly)
 - [ZBX-2246] added trigger wizard for logrt item (AM)
 - [ZBX-2241] fixed graph X axis for big periods (Aly)
 - [ZBX-2241] fixed text collide in graphs (Aly)