@@ -1,5 +1,12 @@
 Changes for 1.8.3
 
+ - [ZBX-2261] fixed username hiding in acknowledge comments (AM)
+ - [ZBX-2303] fixed GET/POST methods in processing web scenario steps. Thanks to Hannu Ylitalo (Sasha)
+ - [ZBXNEXT-293] processes now provide more information on why they terminate (asaveljevs)
+ - [ZBX-2304] fixed "no permission" error when screen contains simple graphs with web item (Vedmak)
+ - [ZBX-2268] denied creation of pie\exploded graphs with more than one sum items (Vedmak)
+ - [ZBX-2298] added constant to defines to be able configure default Y axis position: left or right (AM)
+ - [ZBX-2174] fixed a small memory leak in SNMP checks (asaveljevs)
  - [ZBX-2300] fixed caching of "Database monitor" items. Thanks to Kirill Fateev (Sasha)
  - [ZBX-2290] fixed screen cells moving (Vedmak)
  - [ZBX-2301] fixed "configure" script with libssh2-1.0.0 library (Sasha)
